# SimConnectClient

./: CMakeLists.txt  CMakePresets.json
src/: Console.cpp  Console.h  HidDevice.cpp  HidDevice.h  SimConnectClient.cpp  SimConnectClient.h  SimConnectHandler.cpp  SimConnectHandler.h  Simulator.cpp  Simulator.h
